Clase de creacion de colecciones

--- a/public/index.html
+++ b/public/index.html
@@ -117,7 +117,10 @@
                         </div>
                         <div class="div-btnInicioSesion">
                             <a id="btnInicioEmail" class="btn waves-effect waves-light">Iniciar Sesión<i class="material-icons right">send</i></a>
-                        </div>           
+                        </div>
+                        <div class="div-btnInicioSesion">
+                            <a id="btnResetPassword" class="btn waves-effect waves-light">Reestablecer contraseña<i class="material-icons right">send</i></a>
+                        </div>       
                         <div class="lbl-ingresar-redes">
                             <span>INGRESA CON:</span>
                         </div>
@@ -223,6 +226,7 @@
 <!-- Links agregados de Firebase -->
 <script defer src="https://www.gstatic.com/firebasejs/6.2.0/firebase-app.js"></script>
 <script defer src="https://www.gstatic.com/firebasejs/6.2.0/firebase-auth.js"></script>
+<script defer src="https://www.gstatic.com/firebasejs/6.2.0/firebase-firestore.js"></script>
 
 <!--build:js js/main.min.js -->
 <script type="text/javascript" src="js/config/ConfigFirebase.js"></script>
